Rename cashflow to income statement.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="vis5"></div>
 
     <script type="text/javascript">
-      vegaEmbed('#vis1', "cashflow.json");
+      vegaEmbed('#vis1', "incomestatement.json");
       vegaEmbed('#vis2', "netliquid.json");
       vegaEmbed('#vis3', "netposition.json");
       vegaEmbed('#vis4', "wealth.json");
