Clarify hledger-vega template structure, and give instructions for creating stock charts.

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
     <div class="halfchart" id="vis1"></div>
     <div class="halfchart" id="vis2"></div>
     <div class="halfchart" id="vis3"></div>
-    <div class="fullchart" id="vis4"></div>
+    <div class="halfchart" id="vis4"></div>
     <div id="vis5"></div>
 
     <script type="text/javascript">
-      vegaEmbed('#vis1', "incomestatement.json");
-      vegaEmbed('#vis2', "netliquid.json");
-      vegaEmbed('#vis3', "netposition.json");
-      vegaEmbed('#vis4', "wealth.json");
-      vegaEmbed('#vis5', "expensecategories.json");
+      vegaEmbed('#vis1', "reports/incomestatement.json");
+      vegaEmbed('#vis2', "reports/netliquid.json");
+      vegaEmbed('#vis3', "reports/netposition.json");
+      vegaEmbed('#vis4', "reports/wealth.json");
+      vegaEmbed('#vis5', "reports/expensecategories.json");
     </script>
   </body>
 </html>
