--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,16 @@
     </style>
   </head>
   <body>
+    <div class="halfchart" id="vis0"></div>
     <div class="halfchart" id="vis1"></div>
     <div class="halfchart" id="vis2"></div>
     <div class="halfchart" id="vis3"></div>
-    <div class="halfchart" id="vis4"></div>
+    <div class="fullchart" id="vis4"></div>
     <div id="vis5"></div>
 
     <script type="text/javascript">
-      vegaEmbed('#vis1', "reports/incomestatement.json");
+      vegaEmbed('#vis0', "reports/incomestatement.json");
+      vegaEmbed('#vis1', "reports/savings.json");
       vegaEmbed('#vis2', "reports/netliquid.json");
       vegaEmbed('#vis3', "reports/netposition.json");
       vegaEmbed('#vis4', "reports/wealth.json");
